@@ -3,6 +3,11 @@
 package com.landit.landitbe.feature.content.client.ai;
 
 import com.landit.landitbe.config.ai.AiClientProperties;
+import com.landit.landitbe.feature.content.client.ai.dto.AiPronunciationAnalysisRequest;
+import com.landit.landitbe.feature.content.client.ai.dto.AiPronunciationJudgedWord;
+import com.landit.landitbe.feature.content.exception.AiPronunciationResponseInvalidException;
+import com.landit.landitbe.feature.content.exception.InvalidAudioException;
+import com.landit.landitbe.feature.content.exception.PronunciationAnalysisFailedException;
 import com.landit.landitbe.shared.exception.ApiException;
 import com.landit.landitbe.shared.exception.ErrorCode;
 import java.io.IOException;
@@ -11,7 +16,10 @@ import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
+import java.util.List;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.stereotype.Component;
 import tools.jackson.core.JacksonException;
 import tools.jackson.databind.JsonNode;
@@ -42,11 +50,10 @@ public class RemoteAiPronunciationClient implements AiPronunciationClient {
 
   /** {@inheritDoc} */
   @Override
-  public AiPronunciationAnalysisResult analyze(AiPronunciationAnalysisRequest request) {
-    // base-url 설정이 비면 URI 조립 단계에서 500으로 새므로, 다른 Remote 클라이언트들처럼
-    // 여기서 걸러 호출 실패(502)로 응답한다. resolve()는 끝 슬래시 유무도 흡수한다.
-    if (properties.baseUrl() == null || properties.baseUrl().isBlank()) {
-      throw new ApiException(ErrorCode.PRONUNCIATION_ANALYSIS_FAILED);
+  public List<AiPronunciationJudgedWord> analyze(AiPronunciationAnalysisRequest request) {
+    // base-url 미설정은 다른 Remote 클라이언트들처럼 호출 실패(502)로 처리한다.
+    if (StringUtils.isBlank(properties.baseUrl())) {
+      throw new PronunciationAnalysisFailedException("AI 서버 주소가 설정되지 않았습니다.");
     }
     URI uri = URI.create(properties.baseUrl()).resolve(ANALYZE_PATH);
     try {
@@ -62,52 +69,72 @@ public class RemoteAiPronunciationClient implements AiPronunciationClient {
               .build();
       HttpResponse<String> response =
           httpClient.send(httpRequest, HttpResponse.BodyHandlers.ofString(StandardCharsets.UTF_8));
-      if (response.statusCode() < 200 || response.statusCode() >= 300) {
-        throw toApiException(response.body());
+      if (!HttpStatusCode.valueOf(response.statusCode()).is2xxSuccessful()) {
+        throw toUpstreamException(response.body());
       }
-      return readData(response.body());
-    } catch (ApiException exception) {
-      throw exception;
+      return readJudgedWords(response.body());
     } catch (InterruptedException exception) {
       Thread.currentThread().interrupt();
-      throw new ApiException(ErrorCode.PRONUNCIATION_ANALYSIS_FAILED);
+      throw new PronunciationAnalysisFailedException("AI 서버 응답 대기가 중단됐습니다.");
     } catch (IOException exception) {
-      throw new ApiException(ErrorCode.PRONUNCIATION_ANALYSIS_FAILED);
+      throw new PronunciationAnalysisFailedException("AI 서버 호출에 실패했습니다.");
     }
   }
 
-  /** AI 서버 오류 응답에서 공개할 수 있는 오류 코드만 선별해 변환한다. */
-  private ApiException toApiException(String responseBody) {
+  /**
+   * AI 서버 오류 응답에서 공개할 수 있는 오류 코드만 선별해 도메인 예외로 변환한다.
+   *
+   * @param responseBody 오류 응답 본문
+   * @return 통과 대상 코드는 그대로, 그 외는 분석 실패 예외
+   */
+  private ApiException toUpstreamException(String responseBody) {
     try {
       JsonNode root = jsonMapper.readTree(responseBody);
       if (root != null) {
         String upstreamErrorCode = root.path("error").path("code").asString();
         if (ErrorCode.AI_RESPONSE_INVALID.name().equals(upstreamErrorCode)) {
-          return new ApiException(ErrorCode.AI_RESPONSE_INVALID);
+          return new AiPronunciationResponseInvalidException();
         }
         // AI 서버의 오디오 검증(길이 30초 등)에 걸린 경우는 사용자 입력 문제로 그대로 전달한다.
         if (ErrorCode.INVALID_AUDIO.name().equals(upstreamErrorCode)) {
-          return new ApiException(ErrorCode.INVALID_AUDIO);
+          return new InvalidAudioException();
         }
       }
     } catch (JacksonException ignored) {
       // 오류 본문을 해석할 수 없으면 PRONUNCIATION_ANALYSIS_FAILED로 처리한다.
     }
-    return new ApiException(ErrorCode.PRONUNCIATION_ANALYSIS_FAILED);
+    return new PronunciationAnalysisFailedException();
   }
 
-  // 공통 응답 형식(success/data)에서 판정 결과를 꺼낸다.
-  private AiPronunciationAnalysisResult readData(String responseBody) {
+  /**
+   * 공통 응답 형식(success/data)에서 단어별 판정 목록을 꺼낸다.
+   *
+   * @param responseBody 성공 응답 본문
+   * @return 단어별 판정 목록
+   */
+  private List<AiPronunciationJudgedWord> readJudgedWords(String responseBody) {
     try {
       JsonNode root = jsonMapper.readTree(responseBody);
       if (!root.path("success").asBoolean(false) || root.get("data") == null) {
-        throw new ApiException(ErrorCode.AI_RESPONSE_INVALID);
+        throw new AiPronunciationResponseInvalidException();
       }
-      return jsonMapper.treeToValue(root.get("data"), AiPronunciationAnalysisResult.class);
+      WordsPayload payload = jsonMapper.treeToValue(root.get("data"), WordsPayload.class);
+      if (payload.words() == null) {
+        throw new AiPronunciationResponseInvalidException();
+      }
+      return payload.words();
     } catch (ApiException exception) {
       throw exception;
     } catch (JacksonException exception) {
-      throw new ApiException(ErrorCode.AI_RESPONSE_INVALID);
+      throw new AiPronunciationResponseInvalidException();
     }
   }
+
+  /**
+   * 응답 {@code data} 노드의 역직렬화 전용 틀이다. HTTP JSON 계약({@code data.words})은 그대로 두고, 코드에서는 목록만 쓰기 위해
+   * 클라이언트 내부에서만 사용한다.
+   *
+   * @param words 단어별 판정 목록
+   */
+  private record WordsPayload(List<AiPronunciationJudgedWord> words) {}
 }
